syntax = "proto3";

option csharp_namespace = "ApplicationUserIdentity.API.Proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package ApplicationUserIdentityApi;

service UserGrpc {
	rpc FindUserById(google.protobuf.Int32Value) returns (UserDTOGrpc){}
	rpc FindUserByUId(google.protobuf.StringValue) returns (UserDTOGrpc){}
	
	rpc ChangeInfoApplicationUser(ApplicationUserCommandGrpc) returns (ChangeInfoResponseGrpc) {}
}

message PictureDtoGrpc {
	google.protobuf.Int32Value id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue fileName = 3;
	google.protobuf.StringValue filePath = 4;
	google.protobuf.Int64Value  size = 5;
	google.protobuf.Int32Value displayOrder = 6;
	google.protobuf.Int32Value pictureType = 7;
	google.protobuf.StringValue extension = 8;
	google.protobuf.StringValue redirectLink = 9;
	google.protobuf.StringValue temporaryUrl = 10;
	google.protobuf.BoolValue   isUpdating = 11;
	google.protobuf.StringValue optimizedUrl = 12;
	google.protobuf.StringValue w160Url = 13;
	google.protobuf.StringValue w1280Url = 14;
	google.protobuf.StringValue w320Url = 15;
	google.protobuf.StringValue w640Url = 16;
	google.protobuf.StringValue thumbUrl = 17;
}

message UserDTOGrpc {
	google.protobuf.Int32Value  id = 1;
	google.protobuf.StringValue identityGuid = 2;
	google.protobuf.StringValue accountingCustomerCode = 3;
	google.protobuf.StringValue CustomerCode = 4;
	google.protobuf.StringValue code = 5;
	google.protobuf.StringValue userName = 6;
	google.protobuf.StringValue firstName = 7;
	google.protobuf.StringValue lastName = 8;
	google.protobuf.StringValue fullName = 9;
	google.protobuf.Int32Value Gender = 10;
	google.protobuf.StringValue MobilePhoneNo = 11;
	google.protobuf.Int32Value  AvatarId = 12;
	google.protobuf.StringValue  Email = 13;
	google.protobuf.StringValue FaxNo = 14;
	google.protobuf.StringValue Address = 15;
	google.protobuf.StringValue Ward = 16;
	google.protobuf.StringValue WardIdentityGuid = 17;
	google.protobuf.StringValue District = 18;
	google.protobuf.StringValue DistrictIdentityGuid = 19;
	google.protobuf.StringValue Province = 20;
	google.protobuf.StringValue ProvinceIdentityGuid = 21;
	google.protobuf.StringValue  IdIssuedBy = 22;
	google.protobuf.Timestamp  IdDateOfIssue = 23;
	google.protobuf.StringValue  TaxIdNo = 24;
	google.protobuf.StringValue BusinessRegCertificate = 25;
	google.protobuf.Timestamp BrcDateOfIssue = 26;
	google.protobuf.StringValue BrcIssuedBy = 27;
	google.protobuf.StringValue RepresentativePersonName = 28;
	google.protobuf.StringValue RpPhoneNo = 29;
	google.protobuf.Timestamp   RpDateOfBirth = 30;
	google.protobuf.StringValue RpJobPosition = 31;
	bool IsEnterprise = 32;
	PictureDtoGrpc Avatar = 33;
	google.protobuf.StringValue CId = 34;
	google.protobuf.StringValue shortName = 35;
	
}

message ApplicationUserCommandGrpc{
	google.protobuf.Int32Value id = 1;	
	google.protobuf.StringValue fullName = 2;	
	google.protobuf.StringValue firstName = 3;	
	google.protobuf.StringValue lastName = 4;	
	google.protobuf.StringValue shortName = 5;	
	google.protobuf.StringValue mobilePhoneNo = 6;	
	google.protobuf.StringValue email = 7;	
	google.protobuf.StringValue address = 8;	
	google.protobuf.StringValue provinceIdentityGuid = 9;	
	google.protobuf.StringValue districtIdentityGuid = 10;
	google.protobuf.StringValue province = 11;
	google.protobuf.StringValue district = 12;
}

message ChangeInfoResponseGrpc{
	bool isSuccess = 1;	
	google.protobuf.StringValue message = 2;	
}

